--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,6 +27,8 @@
         "angular-material": "^1.1.4",
         "angular-messages": "^1.6.7",
         "angular-ui-router": "^1.0.3",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "npm": "^6.4.1",
+        "sweetalert": "^2.1.0"
     }
 }
